Fix keyboard cutting off in mobile.

--- a/frontend/my-wordle/styles.css
+++ b/frontend/my-wordle/styles.css
@@ -208,14 +208,15 @@ body {
   .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
+    /* justify-content: space-between; */
+    /* min-height: 100vh; */
   }
 
   .box-container {
   }
 
   .keyboard {
+    margin-top: auto;
   }
 
   .key {
